Incorrectly compile time linked to Hadoop-core. Build should not require hadoop-core.cor
git-svn-id: http://www.jointhegrid.com/svn/hadoop-cacti-jtg/trunk@53 d48a9152-7e18-4f87-800c-ca59c26a89d2

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,5 @@
+application.title=hadoop-cacti-jtg
+application.vendor=ecapriolo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -18,6 +20,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/hadoop-cacti-jtg.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-logging-1.0.4.jar=../../../../hadoop-0.20.0/lib/commons-logging-1.0.4.jar
+file.reference.commons-logging-api-1.0.4.jar=../../../../hadoop-0.20.0/lib/commons-logging-api-1.0.4.jar
+file.reference.hadoop-0.20.0-core.jar=../../../../hadoop-0.20.0/hadoop-0.20.0-core.jar
+file.reference.log4j-1.2.15.jar=../../../../hadoop-0.20.0/lib/log4j-1.2.15.jar
+file.reference.slf4j-api-1.4.3.jar=../../../../hadoop-0.20.0/lib/slf4j-api-1.4.3.jar
+file.reference.slf4j-log4j12-1.4.3.jar=../../../../hadoop-0.20.0/lib/slf4j-log4j12-1.4.3.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -45,7 +53,13 @@ meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.hadoop-0.20.0-core.jar}:\
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${file.reference.commons-logging-api-1.0.4.jar}:\
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.slf4j-api-1.4.3.jar}:\
+    ${file.reference.slf4j-log4j12-1.4.3.jar}
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
